add page listar e algumas imgs. Implementacao controller

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -11,7 +11,6 @@
 <title>.:: Pedidos de Oração ::.</title>
 </head>
 <body>
-
 	<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
 		<div class="container-fluid">
 			<a th:href="@{/pedidos}"><img src="assets/tph.png" alt="icon" width="100" height="100" class="d-inline-block align-text-top"></a>
@@ -26,7 +25,7 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 					<li class="nav-item"><a class="nav-link"
-						th:href="@{/pedidos}">Cadastrar Pedido</a></li>
+						th:href="@{/pedidos}">Novo Pedido</a></li>
 					<li class="nav-item"><a class="nav-link" th:href="@{/listar}">Listar Pedidos</a></li>
 				</ul>
 			</div>
